[gd_scene load_steps=3 format=3 uid="uid://c00syb1e2jfkw"]

[ext_resource type="Script" path="res://Scene/menu/Main_menu.gd" id="1_cjkd0"]
[ext_resource type="FontFile" uid="uid://bm7e7aaxlijxw" path="res://HomeVideo-Regular.otf" id="2_1uyht"]

[node name="Main_menu" type="Node2D"]
position = Vector2(-59, -17)
script = ExtResource("1_cjkd0")
metadata/_edit_vertical_guides_ = [640.0]

[node name="Game_name" type="Label" parent="."]
offset_left = 384.0
offset_top = 62.0
offset_right = 1014.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("2_1uyht")
theme_override_font_sizes/font_size = 75
text = "Stock delivery"

[node name="Start" type="Button" parent="."]
offset_left = 549.0
offset_top = 184.0
offset_right = 849.0
offset_bottom = 284.0
theme_override_fonts/font = ExtResource("2_1uyht")
theme_override_font_sizes/font_size = 45
text = "Начать"

[node name="Settings" type="Button" parent="."]
offset_left = 549.0
offset_top = 310.0
offset_right = 849.0
offset_bottom = 410.0
theme_override_fonts/font = ExtResource("2_1uyht")
theme_override_font_sizes/font_size = 45
text = "Настройки"

[node name="Authors" type="Button" parent="."]
offset_left = 549.0
offset_top = 431.0
offset_right = 849.0
offset_bottom = 531.0
theme_override_fonts/font = ExtResource("2_1uyht")
theme_override_font_sizes/font_size = 45
text = "Авторы"

[node name="Exit" type="Button" parent="."]
offset_left = 549.0
offset_top = 552.0
offset_right = 849.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("2_1uyht")
theme_override_font_sizes/font_size = 45
text = "Выйти"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Authors" to="." method="_on_authors_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
